# open_mp

./: CMakeLists.txt  README.md  main.cpp
include/: SettingsParser.hpp  Timer.hpp
include/cxxopts/: cxxopts.hpp
source/: SettingsParser.cpp  Timer.cpp
